# smsmanager

./: .mise.toml  Dockerfile  README.md  dummy-request.json  fnox.toml  main.py  oncall.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: build_and_push_chart.yaml  build_and_push_image.yaml  codeql.yml  deploy.yaml  main.yaml  test.yaml
charts/: Chart.yaml  Feature.yaml  values.yaml
charts/smsmanager/: Chart.yaml  values.yaml
charts/smsmanager/templates/: _helpers.tpl  deployment.yaml  naisvakt-alertmanagerconfig.yaml  networkpolicy.yaml  secret.yaml  service.yaml
charts/templates/: deployment.yaml  naisvakt-alertmanagerconfig.yaml  networkpolicy.yaml  secret.yaml  service.yaml
